feat:Registration and login features well implemented

--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
   "dependencies": {
     "@inlang/paraglide-sveltekit": "^0.15.5",
     "drizzle-orm": "^0.40.0",
+    "lucide-svelte": "^0.483.0",
     "postgres": "^3.4.5",
     "svelte-routing": "^2.13.0"
   }
